Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Ferop : Ferop is a .NET library that allows inline C/C++ to compile and run on Windows/Linux/OSX.">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ferop by TIHan</title>
+    <title>Ferop</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Ferop</h1>
-        <h2>Ferop is a .NET library that allows inline C/C++ to compile and run on Windows/Linux/OSX.</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/TIHan/Ferop">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/TIHan/Ferop/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/TIHan/Ferop/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/TIHan/Ferop" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Ferop</h1>
+          <h2 id="project_tagline">Ferop is a .NET library that allows inline C/C++ to compile and run on Windows/Linux/OSX.</h2>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="quick-start" class="anchor" href="#quick-start" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quick Start</h3>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/TIHan/Ferop/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/TIHan/Ferop/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-<h2>
-<a id="fsharp" class="anchor" href="#fsharp" aria-hidden="true"><span class="octicon octicon-link"></span></a>FSharp</h2>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
+<a id="quick-start" class="anchor" href="#quick-start" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quick Start</h2>
+
+<h3>
+<a id="f" class="anchor" href="#f" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>F#</strong>
+</h3>
 
 <pre><code>open System.Runtime.CompilerServices
-
 open Ferop
 
 [&lt;Ferop&gt;]
@@ -53,6 +56,15 @@ let main args =
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Ferop maintained by <a href="https://github.com/TIHan">TIHan</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
